# curve_compression

./: CMakeLists.txt  README.md  package.xml
include/curve_compression/: geometryFunctions.h
src/: curveCompression.cpp  curveCompressionClient.cpp  geometryFunctions.cpp
srv/: compressCurve.srv  compressCurveUntil.srv
